...
import UIKit
import CoreData

//MARK: - Enums
enum EntityType : String {
    case Item = "Item"
    case Bin = "Bin"
    case Location = "Location"

}


enum ButtonTag : Int{

...
